Use tus-js-client with 5 MiB upload chunks (0.4.15)
